2003-12-16  Koichi Sasada <sasada@namikilab.tuat.ac.jp>

	* src/kahua/gsid.scm : modified decompose-gsid to through
	invalid gsid. if called with invalid gsid, return (values #f gsid).

	* src/kahua/server.scm : added kahua-worker-type.

	* src/kahua/html.scm : syntax define-entry is added.
	 and modified a/cont to support named continuation.

	* test/worker.scm, test/gsid.scm, acont.kahua  : added tests to
	test above. worker.scm is added the test of named continuation with
	acont.kahua.

	* examples/lambdabooks.kahua, lambdabooks/books.kahua, 
	lambdabooks/partner.kahua, lambdabooks/useradmin.kahua :
	modified to use named continuation. 
	For example, to access partner ship page, you can access by
	"kahua.cgi/lambdabooks/partner-page".

2003-12-11  Nobuo Yamashita  <nobsun@sampou.org>

	* test/spvr.scm, test/worker.scm : revised.

	* test/hello-world.kahua, test/greeting.kahua, test/lister.kahua :
	Added for testing.

2003-12-11  Nobuo Yamashita  <nobsun@sampou.org>
	
	* version 0.1.1 :
	Made refactoring, most of kahua-elua integrated in kahua-server.

	Most of kahua/app/elua.scm code was included into kahua-server.
	kahua/app/elua/alt.scm --> kahua/html.scm
	Removed kahua/app/

	* configure.ac : modified version number from 0.1 to 0.2_pre0

	* cgi/ : removed kahua-dummy.cgi kahua-ekahi.cgi

	* cgi/Makefile.in : modified SCRITPTS from kahua-elua.cgi to kahua.cgi

	* examples/lambdabooks.kahua: removed (use kahua.app.elua.alt)

	* test/app/ : removed

	* test/Makefile : removed line for app subdirectory

	* test/gsid.scm : modified line for testing worker-id->sockaddr

	* test/spvr.scm, test/worker.scm : almost all test lines commented out.
	We *MUST* implement new testing

	* src/Makefile.in : adjusted for new version

	* src/kahua-dummy.in : removed

	* src/kahua-server.in :
	
	Added following definitions from src/kahua/app/elua.scm
	  primary-database-name
	  main-proc
	  initial-main-proc
	  handle-request
	  default-handler
